# hire-me-bot

./: .env.example  .gitignore  README.md  REPORT.md  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy-pages.yml  jsearch.yml  pipeline.yml  reseed-companies.yml  stats.yml
config/: companies.yaml  excluded_companies.yaml  profile.json
docs/: applied.json  index.html  jobs.html  jobs.json  last_updated.txt  stats.json
scripts/: add_applied.py  fetch_jsearch.py  generate_applied_json.py  generate_jobs_json.py  generate_stats.py  report.py  seed_companies.py  track.py
sql/: schema.sql
src/hire_me_bot/: format_utils.py  pipeline.py  settings.py
src/hire_me_bot/connectors/: amazon.py  ashby.py  base.py  detect.py  greenhouse.py  jsearch.py  lever.py  recruitee.py  smartrecruiters.py  workday.py
src/hire_me_bot/db/: client.py  postings_repo.py
src/hire_me_bot/filtering/: academic_calendar.py  citizenship.py  clearance.py  enrollment.py  experience.py  (+2 more)
tests/: test_add_applied.py  test_discord_notify.py  test_format_utils.py  test_generate_applied_json.py  test_generate_jobs_json.py  test_pipeline.py  test_postings_repo.py  test_report.py  test_seed_companies.py  test_track.py
tests/connectors/: test_ashby.py  test_base.py  test_greenhouse.py  test_jsearch.py  test_lever.py  test_recruitee.py  test_smartrecruiters.py  test_workday.py
tests/filtering/: test_academic_calendar.py  test_citizenship.py  test_clearance.py  test_enrollment.py  test_experience.py  test_keywords.py  test_location.py
tests/scoring/: test_jd_extract.py  test_scorer.py
(+4 files in other folders)
