[project]
name = "hire-me-bot"
version = "0.1.0"
description = "Self-updating pipeline that watches company job boards for SWE intern/new-grad roles, scores fit with Claude, and notifies via Discord."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "supabase>=2.6",
    "anthropic>=0.34",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
